force-app/main/default/objects/PersonDigitalIdentity__x/PersonDigitalIdentity__x.object-meta.xml
<CustomObject>
    <description>PersonDigitalIdentity</description>
    <externalDataSource>PersonDigitalIdentity</externalDataSource>
    <externalName>PersonDigitalIdentity</externalName>
    <label>Person Digital Identity</label>
    <pluralLabel>Person Digital Identity</pluralLabel>
</CustomObject>