force-app/main/default/objects/PersonDigitalIdentity__x/fields/ANZConnectStatus__c.field-meta.xml
<CustomField>
    <fullName>ANZConnectStatus__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Aegis</complianceGroup>
    <description>Displays the ANZ Connect state of a given customer</description>
    <externalDeveloperName>ANZConnectStatus</externalDeveloperName>
    <inlineHelpText>• Connected - Customer has performed ANZ Connect
• Disconnected - Customer has disconnected from ANZ Connect
• Blank - Customer has not performed ANZ Connect</inlineHelpText>
    <label>ANZ Connect Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>