force-app/main/default/objects/PersonDigitalIdentity__x/fields/Created_On__c.field-meta.xml
<CustomField>
    <fullName>Created_On__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Created On</description>
    <externalDeveloperName>Created On</externalDeveloperName>
    <label>Created On</label>
    <length>100</length>
    <type>Text</type>
</CustomField>