force-app/main/default/objects/PersonDigitalIdentity__x/fields/credentialsResId__c.field-meta.xml
<CustomField>
    <fullName>credentialsResId__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Salesforce</complianceGroup>
    <description>credentialsResId</description>
    <externalDeveloperName>credentialsResId</externalDeveloperName>
    <label>credentialsResId</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>