force-app/main/default/objects/PersonDigitalIdentity__x/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <label>Customer</label>
    <length>255</length>
    <referenceTargetField>Account.External_Id__c</referenceTargetField>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Person Digital Identities</relationshipLabel>
    <relationshipName>PersonDigitalIdentities</relationshipName>
    <type>IndirectLookup</type>
</CustomField>