force-app/main/default/objects/PersonDigitalIdentity__x/fields/CustomerName__c.field-meta.xml
<CustomField>
    <fullName>CustomerName__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <externalDeveloperName>CustomerName</externalDeveloperName>
    <label>Customer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>