force-app/main/default/objects/PersonDigitalIdentity__x/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Email</description>
    <externalDeveloperName>Email</externalDeveloperName>
    <label>Email</label>
    <length>100</length>
    <type>Text</type>
</CustomField>