force-app/main/default/objects/PersonDigitalIdentity__x/fields/IAL_Identity_Assurance_Level__c.field-meta.xml
<CustomField>
    <fullName>IAL_Identity_Assurance_Level__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Salesforce</complianceGroup>
    <description>IAL (Identity Assurance Level)</description>
    <externalDeveloperName>IAL (Identity Assurance Level)</externalDeveloperName>
    <label>IAL (Identity Assurance Level)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>