force-app/main/default/objects/PersonDigitalIdentity__x/fields/Internal_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Internal_User_ID__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Internal User ID</description>
    <externalDeveloperName>Internal User ID</externalDeveloperName>
    <label>Internal User ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>