force-app/main/default/objects/PersonDigitalIdentity__x/fields/MigrationType__c.field-meta.xml
<CustomField>
    <fullName>MigrationType__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Aegis</complianceGroup>
    <description>Indicates whether the customer has been flagged for Migration</description>
    <externalDeveloperName>MigrationType</externalDeveloperName>
    <inlineHelpText>• ANZ Migration - Customer is part of the ANZ to ANZ Plus customer migration
• Blank - Customer is not currently part of ANZ customer migration</inlineHelpText>
    <label>Migration Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MIGRATION_TYPE_BANK_LED</fullName>
                <label>ANZ Migration</label>
            </value>
            <value>
                <fullName>MIGRATION_TYPE_UNSPECIFIED</fullName>
                <label>N/A</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>