force-app/main/default/objects/PersonDigitalIdentity__x/fields/Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Number__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Mobile Number</description>
    <externalDeveloperName>Mobile Number</externalDeveloperName>
    <label>Mobile Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>