force-app/main/default/objects/PersonDigitalIdentity__x/fields/OCV_ID__c.field-meta.xml
<CustomField>
    <fullName>OCV_ID__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Salesforce</complianceGroup>
    <description>OCV ID</description>
    <externalDeveloperName>OCV ID</externalDeveloperName>
    <label>OCV ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>