force-app/main/default/objects/PersonDigitalIdentity__x/fields/Persona_ID__c.field-meta.xml
<CustomField>
    <fullName>Persona_ID__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Persona ID</description>
    <externalDeveloperName>Persona ID</externalDeveloperName>
    <label>Persona ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>