force-app/main/default/objects/PersonDigitalIdentity__x/fields/PIN_Status__c.field-meta.xml
<CustomField>
    <fullName>PIN_Status__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Salesforce</complianceGroup>
    <description>PIN Status</description>
    <externalDeveloperName>PIN Status</externalDeveloperName>
    <label>PIN Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>