force-app/main/default/objects/PersonDigitalIdentity__x/fields/pinRefId__c.field-meta.xml
<CustomField>
    <fullName>pinRefId__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Salesforce</complianceGroup>
    <description>pinRefId</description>
    <externalDeveloperName>pinRefId</externalDeveloperName>
    <label>pinRefId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>