force-app/main/default/objects/PersonDigitalIdentity__x/fields/Preferred_Name__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Name__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Preferred Name</description>
    <externalDeveloperName>Preferred Name</externalDeveloperName>
    <label>Preferred Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>