force-app/main/default/objects/PersonDigitalIdentity__x/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Status</description>
    <externalDeveloperName>Status</externalDeveloperName>
    <label>Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>