force-app/main/default/objects/PersonDigitalIdentity__x/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Type</description>
    <externalDeveloperName>Type</externalDeveloperName>
    <label>Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>