force-app/main/default/objects/PersonDigitalIdentity__x/fields/UUID__c.field-meta.xml
<CustomField>
    <fullName>UUID__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Salesforce</complianceGroup>
    <description>UUID</description>
    <externalDeveloperName>UUID</externalDeveloperName>
    <label>UUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>